--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "celery[redis]>=5.4.0",
+    "channels>=4.2.0",
     "django>=5.1.6",
 ]
