--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "celery[redis]>=5.4.0",
     "channels>=4.2.0",
+    "channels-redis>=4.2.1",
     "django>=5.1.6",
     "uvicorn>=0.34.0",
     "websockets>=14.2",
